--- a/project.properties
+++ b/project.properties
@@ -11,4 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-10
+target=android-18
+android.library.reference.1=..\\..\\..\\adt-bundle-windows-x86-20130917\\sdk\\extras\\android\\support\\v7\\appcompat
