--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,9 +14,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:name="fr.utt.isi.nomp_mobile.activities.TicketFormActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light" >
+        </activity>
+        <activity
+            android:name="fr.utt.isi.nomp_mobile.TicketPageActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light" >
+        </activity>
+        <activity
             android:name="fr.utt.isi.nomp_mobile.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light">
+            android:theme="@style/Theme.AppCompat.Light" >
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
