--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,33 +7,39 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="18" />
+    
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name="fr.utt.isi.nomp_mobile.activities.TicketFormActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light" >
-        </activity>
-        <activity
-            android:name="fr.utt.isi.nomp_mobile.TicketPageActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light" >
-        </activity>
+        
         <activity
             android:name="fr.utt.isi.nomp_mobile.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light" >
-            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="fr.utt.isi.nomp_mobile.activities.TicketFormActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light" >
+        </activity>
+        
+        <activity
+            android:name="fr.utt.isi.nomp_mobile.activities.TicketPageActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light" >
+        </activity>
+        
     </application>
 
 </manifest>
