--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,9 +7,9 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="18" />
-    
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -17,7 +17,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <activity
             android:name="fr.utt.isi.nomp_mobile.MainActivity"
             android:label="@string/app_name"
@@ -28,19 +27,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="fr.utt.isi.nomp_mobile.activities.TicketFormActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light" >
         </activity>
-        
         <activity
             android:name="fr.utt.isi.nomp_mobile.activities.TicketPageActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light" >
         </activity>
-        
+        <activity
+            android:name="fr.utt.isi.nomp_mobile.activities.SignUpActivity"
+            android:label="@string/title_activity_sign_up"
+            android:theme="@style/Theme.AppCompat.Light" >
+        </activity>
     </application>
 
 </manifest>
