ignore conflicting files like project.properties & gen/.

--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,14 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+
+###############
+## Custome Android
+###############
+
+# Project properties
+project.properties
+
+# Auto-generated files
+gen/
