--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -28,13 +28,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="fr.utt.isi.nomp_mobile.activities.TicketFormActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light" >
+            android:name="fr.utt.isi.nomp_mobile.activities.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:theme="@style/Theme.AppCompat.Light"
+            android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
         <activity
             android:name="fr.utt.isi.nomp_mobile.activities.TicketPageActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_ticket_page"
             android:theme="@style/Theme.AppCompat.Light" >
         </activity>
         <activity
@@ -43,14 +44,18 @@
             android:theme="@style/Theme.AppCompat.Light" >
         </activity>
         <activity
-            android:name="fr.utt.isi.nomp_mobile.activities.LoginActivity"
-            android:label="@string/title_activity_login"
-            android:theme="@style/Theme.AppCompat.Light"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
-        </activity>
-        <activity
             android:name="fr.utt.isi.nomp_mobile.activities.SettingsActivity"
             android:label="@string/title_activity_settings"
+            android:theme="@style/Theme.AppCompat.Light" >
+        </activity>
+        <activity
+            android:name="fr.utt.isi.nomp_mobile.activities.AccountActivity"
+            android:label="@string/title_activity_account"
+            android:theme="@style/Theme.AppCompat.Light" >
+        </activity>
+        <activity
+            android:name="fr.utt.isi.nomp_mobile.activities.TicketFormActivity"
+            android:label="@string/title_activity_ticket_form"
             android:theme="@style/Theme.AppCompat.Light" >
         </activity>
     </application>
